--- a/Web-app/index.html
+++ b/Web-app/index.html
@@ -5,9 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-
-    <p>Git</p>
     <h1>Git commit</h1>
-
+    <h2>Git hub</h2>
 </body>
 </html>
+
+
